--- a/src/less/dialog.less
+++ b/src/less/dialog.less
@@ -48,40 +48,9 @@
   position: absolute;
 }
 
-.dialog.dialog-bottom {
-  transform-origin: bottom center;
-}
-
-.dialog.dialog-bottom.dialog-left {
-  transform-origin: bottom left;
-}
-
-.dialog.dialog-bottom.dialog-right {
-  transform-origin: bottom right;
-}
-
-.dialog.dialog-left {
-  transform-origin: left center;
-}
-
-.dialog.dialog-right {
-  transform-origin: right center;
-}
-
-.dialog.dialog-top {
-  transform-origin: top center;
-}
-
-.dialog.dialog-top.dialog-left {
-  transform-origin: top left;
-}
-
-.dialog.dialog-top.dialog-right {
-  transform-origin: top right;
-}
-
 .dialog-content {
   line-height: @content-line-height;
+  overflow: auto;
   padding: @content-padding;
 }
 
@@ -115,4 +84,38 @@
   font-weight: bold;
   margin: 0;
   padding: 0;
+}
+
+// DIALOG POSITIONS
+
+.dialog.dialog-bottom {
+  transform-origin: bottom center;
+}
+
+.dialog.dialog-bottom.dialog-left {
+  transform-origin: bottom left;
+}
+
+.dialog.dialog-bottom.dialog-right {
+  transform-origin: bottom right;
+}
+
+.dialog.dialog-left {
+  transform-origin: left center;
+}
+
+.dialog.dialog-right {
+  transform-origin: right center;
+}
+
+.dialog.dialog-top {
+  transform-origin: top center;
+}
+
+.dialog.dialog-top.dialog-left {
+  transform-origin: top left;
+}
+
+.dialog.dialog-top.dialog-right {
+  transform-origin: top right;
 }
